--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -39,10 +39,10 @@
         </div>
     </div>
     <div class="h-row3 h-set">
-        <div class="hr3s1"><a href="/">HOME</a></div>
-        <div class="hr3s1"><a href="/breadList">베스트</a></div>
-        <div class="hr3s1">커스텀빵여행</div>
-        <div class="hr3s1 "><a href="/post">빵뮤니티</a></div>
+        <div class="hr3s1"><a href="/" class="category-custom">HOME</a></div>
+        <div class="hr3s1"><a href="/breadList" class="category-custom">베스트</a></div>
+        <div class="hr3s1"><a class="category-custom">커스텀빵여행</a></div>
+        <div class="hr3s1 "><a href="/post" class="category-custom">빵뮤니티</a></div>
         <div class="col1">
             <div class="search">
                 <input type="text" class="search-box">
