--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -40,11 +40,15 @@
     </div>
     <div class="a-row3" th:each="post : ${posts}">
         <div class="id" th:text="${post.id}">1</div>
-        <a href="" class="title" th:text="${post.title}" th:href="@{/post/{postId} (postId=${post.id})}">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</a>
+        <div class="title">
+            <a href="" th:text="${post.title}" th:href="@{/post/{postId} (postId=${post.id})}">대전역 오자마자 가야될 곳 5곳 꼽아봤어용!! [12]</a>
+            <div class="count-row">
+                <span>[</span><span class="comment-count" th:text="${post.comment.size()}"></span><span>]</span>
+            </div>
+
+        </div>
         <div class="nickname" th:text="${post.member.nickname}">한화우승</div>
-        <div class="date"
-             th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd HH:mm')}"
-        >2024-02-01</div>
+        <div class="date" th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd HH:mm')}">2024-02-01</div>
         <div class="view">
             <div class="views" th:text="${post.view}">3,200</div>
         </div>
