--- a/src/main/resources/static/css/post.css
+++ b/src/main/resources/static/css/post.css
@@ -35,13 +35,17 @@
 }
 .article-container .id{
     width: 3%;
-    text-align: center;
 }
 .article-container .title{
     width: 52%;
-    text-align: center;
+    display: flex;
 }
-
+.title .title-row{
+   overflow: hidden;
+}
+.title .count-row{
+    width: 5%;
+}
 
 
 .a-row2 .views{
@@ -87,6 +91,11 @@
     overflow: hidden;
     margin-left: 39px;
 }
+.comment-count{
+    font-weight: 500;
+}
+
+
 
 
 .post-content-container{
