--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -21,7 +21,7 @@
       <div class="login-title">
         로그인
       </div>
-      <form role="form" action="/members/login" class="login-form col"
+      <form role="form" action="/login" class="login-form col"
         th:object="${member}" method="post">
         <div class="login-id">
           <input type="text" placeholder="아이디를 입력해주세요" name="membername"
