--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -3,16 +3,16 @@
 <div class="header" th:fragment="bodyHeader">
     <!--Header 시작-->
     <div class="h-row1 h-set">
-        <div class="col1"th:unless="${loginmember != null}">
+        <div class="col1"th:unless="${session.loginMember != null}">
             <a href="/signup" >
                 회원가입
             </a>
         </div>
         <div class="col2">
-            <button th:if="${loginmember != null}" class="login-member" onclick="popUp()">
-                반갑습니다, <span th:text="${loginmember.nickname}"style="color:#ff8f0d;"></span>님!
+            <button th:if="${session.loginMember != null}" class="login-member" onclick="popUp()">
+                반갑습니다, <span th:text="${session.loginMember.nickname}"style="color:#ff8f0d;"></span>님!
             </button>
-            <a th:unless="${loginmember != null}" href="/login">
+            <a th:unless="${session.loginMember != null}" href="/login">
                 로그인
             </a>
         </div>
