refactor: Login Check Interceptor 추가, 게시물 수정 오류 수정

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -23,7 +23,7 @@
             <div class="logout-modal-wrap">
                 <div class="md-lg1">
                     <img src="/images/icon-logout.png" class="icon-logout">
-                    <a href="/members/logout" class="md-lg2">로그아웃</a>
+                    <a href="/logout" class="md-lg2">로그아웃</a>
                 </div>
                 <div class="md-lg3">
                     <img src="/images/icon-setting.png" class="icon-setting">
