--- a/src/main/resources/static/css/postDetail.css
+++ b/src/main/resources/static/css/postDetail.css
@@ -63,7 +63,7 @@
     display: flex;
     align-items: center;
     background-color: white;
-    height: 57px;
+    font-weight: 500;
 }
 .btn-edit:hover{
     color: rgba(0, 0, 0, 0.6);
