--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -23,7 +23,7 @@
             <img src="../images/icon-rightarrow.png" class="righrarrow-img">
         </div>
         <div>
-            <a href="/post/create" class="btn main-color" th:if="${session.loginMember != null}">글쓰기</a>
+            <a href="/post/create" class="btn main-color" th:if="${loginMember != null}">글쓰기</a>
         </div>
     </div>
 </div>
