--- a/src/main/resources/templates/member/createMemberForm.html
+++ b/src/main/resources/templates/member/createMemberForm.html
@@ -31,7 +31,7 @@
             <div class="regi-id row">
                 <label for="id-txt">아이디 <span class="warning">*</span></label>
                 <input type="text" placeholder="아이디를 입력해주세요"
-                       class="id-txt" id="id-txt" th:field="*{username}">
+                       class="id-txt" id="id-txt" th:field="*{membername}">
                 <button class="id-vali">중복확인</button>
             </div>
             <div class="regi-pwd row">
