--- a/src/main/resources/static/css/breadList.css
+++ b/src/main/resources/static/css/breadList.css
@@ -31,7 +31,9 @@
     padding-top: 0px;
 }
 #bookmark-after{
-
+    width: 21px;
+    margin-left: 6px;
+    padding-top: 0px;
 }
 #bakery-detail{
     padding: 0px 15px;
