--- a/src/main/resources/static/css/breadList.css
+++ b/src/main/resources/static/css/breadList.css
@@ -25,12 +25,12 @@
 
 }
 
-#bookmark-before {
+.bookmark-before {
     width: 21px;
     margin-left: 6px;
     padding-top: 0px;
 }
-#bookmark-after{
+.bookmark-after{
     width: 21px;
     margin-left: 6px;
     padding-top: 0px;
@@ -44,7 +44,13 @@
     align-items: center;
     margin-bottom: 5px;
 }
-#bakery-detail .title #bookmark-before{
+#bakery-detail .title .bookmark-before{
+    position: absolute;
+    top: -10px;
+    right: 4px;
+    width: 34px;
+}
+#bakery-detail .title .bookmark-after{
     position: absolute;
     top: -10px;
     right: 4px;
