--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -44,6 +44,7 @@ body{
 }
 .user-info{
     display: flex;
+    align-items: center;
 }
 .profile-img{
     width: 27px;
@@ -111,60 +112,14 @@ body{
 .category-custom:hover {
     background: linear-gradient(to bottom, white 50%, #ff8f0d30 50%);
 }
-
-/*모달*/
-.logout-modal-wrapper{
-    margin: 0;
-    z-index: 1000;
-    position: relative;
-    left: 945px;
-    border: 1px solid;
-    border-radius: 3px;
-    width: 104px;
-    flex-direction: column;
-    display: none;
-    height: 77px;
-}
-.logout-modal-row{
-    height: 0px;
-}
-.logout-modal-wrapper .modal-bg{
-
-}
-.logout-modal-wrap{
-    /* height: 35px; */
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.md-lg1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* padding: 3px 0px; */
-    border-bottom: 1px solid #ececec;
-    height: 38px;
-    transition: background-color linear 0.2s;
-}
-.md-lg1:hover {
-    background-color: #ff8f0d24;
-}
-.md-lg2{
-    font-size: 15px;
-}
-.md-lg3{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 38px;
-}
-.icon-logout{
-    width: 28px;
-}
-.icon-setting{
+.logout-img{
     width: 22px;
-    margin-right: 2px;
+    height: 20px;
+    margin-top: 3px;
+    margin-left: 4px;
+    cursor: pointer;
 }
+
 
 
 /*컬러*/
@@ -186,8 +141,6 @@ body{
 .bg-c3:hover{
     background-color: rgba(0, 142, 82, 0.75);
 }
-
-
 
 
 
