create: 회원의 메모를 받아와 화면에 출력 #53
개인적으로 이 부분 구현하느냐...너무 고생했다 나 자신....

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -141,7 +141,7 @@ body{
     font-weight: 600;
     background-color: transparent;
 }
-#bakery-pen{
+.bakery-pen{
     width: 24px;
     margin-bottom: 2px;
     margin-left: 9px;
