--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -44,9 +44,12 @@
     background-color: #FFEB00;
     color: #333;
     font-weight: bold;
+    width: 330px;
 }
 
 #login-btn{
-    cursor: pointer;
-    font-weight: 600;
+    background-color: #FFEB00;
+    color: #333;
+    font-weight: bold;
+    width: 330px;
 }
