--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -38,6 +38,7 @@
     background-color: #fff;
     border: 1px solid #ccc;
     color: #333;
+    width: 330px;
 }
 
 .kakao-btn {
@@ -48,8 +49,6 @@
 }
 
 #login-btn{
-    background-color: #FFEB00;
-    color: #333;
-    font-weight: bold;
-    width: 330px;
+    cursor: pointer;
+    font-weight: 600;
 }
